--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,9 +1,9 @@
-<div style="text-align:center"class="container">
-  <h1>
-    Welcome {{title}}!
-  </h1>
-  <div class="container">
-    <p>Id: <span>{{greeting.id}}</span></p>
-    <p>Message: <span>{{greeting.content}}!</span></p>
-  </div>
-</div>
+<mat-toolbar color="primary" class="app-header">
+  <div><a href="https://m4k.dev/demo" target="_blank" class="logo">To Do List</a></div>
+  <span class="nav-tool-items">
+    <a mat-button routerLink="login" routerLinkActive="active">Log in</a>
+    <a mat-button mat-raised-button routerLink="register" routerLinkActive="active">Register</a>
+  </span>
+</mat-toolbar>
+
+<router-outlet></router-outlet>
