--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
         <mat-form-field class="myform-full-width">
             <mat-label>Password</mat-label>
             <input matInput [type]="hide_password ? 'password' : 'text'" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }">
-            <button mat-icon-button matSuffix (click)="hide_password = !hide_password" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide_password">
+            <button type="button" mat-icon-button matSuffix (click)="hide_password = !hide_password" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide_password">
                 <mat-icon>{{hide_password ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
             <mat-error *ngIf="submitted && f.password.errors" class="invalid-feedback">
