--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -12,19 +12,29 @@ body {
 
 .app-header {
   justify-content: space-between;
-  position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  z-index: 2;
+  position: fixed;
+  z-index: 222;
+  background-color: #222;
   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, .2), 0 6px 10px 0 rgba(0, 0, 0, .14), 0 1px 18px 0 rgba(0, 0, 0, .12);
 }
 
 .login-wrapper {
-  height: 100%;
+  height: 100vh;
+  margin: 0 10px;
+  min-height: 555px;
 }
 
-.logo {
+
+.logo-icon {
+  margin: 0 0.42rem;
+}
+
+.logo-text {
+  display: flex;
+  align-items: center;
   text-decoration: none;
   color: #ffffff;
 }
@@ -87,4 +97,26 @@ body {
 
 .login-wrapper .mat-form-field-appearance-legacy .mat-form-field-infix {
   padding: 0.8375em 0;
+}
+
+.username-text {
+    font-size: 0.80em;
+}
+
+.username-text > span {
+  padding-right: 10px;
+  font-weight: bold;
+}
+
+footer {
+  padding: 5px 0;
+  background: #0b0b0b;
+  text-align: center;
+  color: #fff
+}
+
+footer > a {
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
 }
