--- a/frontend/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/app/components/tasks/tasks.component.html
@@ -1,40 +1,46 @@
 <div class="tasks-wrapper">
     <div class="mat-elevation-z8 tasks-table">
         <div class="table-buttons">
-            <button type="button" mat-raised-button color="primary" class="new-task-button">
+            <button type="button" mat-raised-button color="primary" class="new-task-button" (click)="openCreateTaskDialog()">
                 New task
                 <mat-icon>add</mat-icon>
             </button>
-            <button type="button" mat-raised-button color="accent" class="modify-task-button">Modify
-                <mat-icon>edit</mat-icon>
+            <button type="button" mat-raised-button color="accent" (click)="hideDone()" class="hide-task-button" [attr.aria-pressed]="hide_done">
+              {{hide_done ? 'Show All' : 'Hide Done'}}
+              <mat-icon>{{!hide_done ? 'visibility_off' : 'visibility'}}</mat-icon>
             </button>
         </div>
-        <table mat-table [dataSource]="dataSource" multiTemplateDataRows>
+        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" multiTemplateDataRows>
       
-          <!-- Position Column -->
-          <ng-container matColumnDef="position">
+          <!-- Id Column -->
+          <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <td mat-cell *matCellDef="let task"> {{task.id}} </td>
           </ng-container>
       
-          <!-- Name Column -->
+          <!-- Desc Column -->
           <ng-container matColumnDef="todo">
-            <th mat-header-cell *matHeaderCellDef> To Do </th>
-            <td mat-cell *matCellDef="let element"> {{element.todo}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> To Do </th>
+            <td mat-cell *matCellDef="let task"> {{task.description}} </td>
           </ng-container>
-      
+          
+          <ng-container matColumnDef="done">
+            <th mat-header-cell *matHeaderCellDef> isDone </th>
+            <td mat-cell *matCellDef="let task"> {{task.done}} </td>
+          </ng-container>
+
           <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef> Last Modified </th>
-            <td mat-cell *matCellDef="let element"> {{element.date}} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header class="mat-header-right"> Last Modified </th>
+            <td mat-cell *matCellDef="let task"> {{task.modifiedDate}} </td>
           </ng-container>
 
           <ng-container matColumnDef="modify">
-            <th mat-header-cell *matHeaderCellDef> Edit / Delete </th>
+            <th mat-header-cell *matHeaderCellDef class="mat-header-right"> Edit / Delete </th>
             <td mat-cell *matCellDef="let row">
-                <button type="button" mat-icon-button matSuffix (click)="false" [attr.aria-label]="'Edit Task'">
+                <button type="button" mat-icon-button matSuffix (click)="openEditTaskDialog(row)" [attr.aria-label]="'Edit Task'">
                     <mat-icon>edit</mat-icon>
                 </button>
-                <button type="button" mat-icon-button matSuffix (click)="false" [attr.aria-label]="'Delete Task'">
+                <button type="button" mat-icon-button matSuffix (click)="clickDeleteTask(row)" [attr.aria-label]="'Delete Task'">
                     <mat-icon>delete</mat-icon>
                 </button>
             </td>
@@ -43,14 +49,12 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr
             mat-row
-            (click)="clickedRows.add(row)"
-            [class.demo-row-is-clicked]="clickedRows.has(row)"
+            (click)="toggleDone(row)"
+            [class.task-is-done]="doneTasks.has(row)"
             *matRowDef="let row; columns: displayedColumns;"
           ></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-      
-        <mat-paginator [pageSizeOptions]="[5, 10, 16]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[15, 30, 50]" showFirstLastButtons></mat-paginator>
       </div>
 </div>
   
