--- a/frontend/src/app/components/tasks/tasks.component.html
+++ b/frontend/src/app/components/tasks/tasks.component.html
@@ -1,60 +1,130 @@
 <div class="tasks-wrapper">
-    <div class="mat-elevation-z8 tasks-table">
-        <div class="table-buttons">
-            <button type="button" mat-raised-button color="primary" class="new-task-button" (click)="openCreateTaskDialog()">
-                New task
-                <mat-icon>add</mat-icon>
-            </button>
-            <button type="button" mat-raised-button color="accent" (click)="hideDone()" class="hide-task-button" [attr.aria-pressed]="hide_done">
-              {{hide_done ? 'Show All' : 'Hide Done'}}
-              <mat-icon>{{!hide_done ? 'visibility_off' : 'visibility'}}</mat-icon>
-            </button>
-        </div>
-        <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)" multiTemplateDataRows>
-      
-          <!-- Id Column -->
-          <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> Id </th>
-            <td mat-cell *matCellDef="let task"> {{task.id}} </td>
-          </ng-container>
-      
-          <!-- Desc Column -->
-          <ng-container matColumnDef="todo">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> To Do </th>
-            <td mat-cell *matCellDef="let task"> {{task.description}} </td>
-          </ng-container>
-          
-          <ng-container matColumnDef="done">
-            <th mat-header-cell *matHeaderCellDef> isDone </th>
-            <td mat-cell *matCellDef="let task"> {{task.done}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="date">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header class="mat-header-right"> Last Modified </th>
-            <td mat-cell *matCellDef="let task"> {{task.modifiedDate}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="modify">
-            <th mat-header-cell *matHeaderCellDef class="mat-header-right"> Edit / Delete </th>
-            <td mat-cell *matCellDef="let row">
-                <button type="button" mat-icon-button matSuffix (click)="openEditTaskDialog(row)" [attr.aria-label]="'Edit Task'">
-                    <mat-icon>edit</mat-icon>
-                </button>
-                <button type="button" mat-icon-button matSuffix (click)="clickDeleteTask(row)" [attr.aria-label]="'Delete Task'">
-                    <mat-icon>delete</mat-icon>
-                </button>
-            </td>
-          </ng-container>
-      
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr
-            mat-row
-            (click)="toggleDone(row)"
-            [class.task-is-done]="doneTasks.has(row)"
-            *matRowDef="let row; columns: displayedColumns;"
-          ></tr>
-        </table>
-        <mat-paginator [pageSizeOptions]="[15, 30, 50]" showFirstLastButtons></mat-paginator>
+  <div class="mat-elevation-z8 tasks-table">
+    <div class="table-navbar">
+      <form class="table-search-form">
+        <mat-form-field class="table-search-full-width" appearance="outline">
+          <mat-icon matPrefix>search</mat-icon>
+          <mat-label>Search...</mat-label>
+          <input
+            matInput
+            type="search"
+            name="search"
+            (keyup)="updateSearch()"
+            (change)="updateSearch()"
+            [(ngModel)]="searchValue"
+          />
+          <button
+            *ngIf="searchValue"
+            matSuffix
+            mat-icon-button
+            aria-label="Clear"
+            (click)="searchValue = '';updateSearch()"
+          >
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-form-field>
+      </form>
+      <div class="table-buttons">
+        <button
+          type="button"
+          mat-raised-button
+          color="primary"
+          class="new-task-button"
+          (click)="openCreateTaskDialog()"
+        >
+          New task
+          <mat-icon>add</mat-icon>
+        </button>
+        <button
+          type="button"
+          mat-raised-button
+          color="accent"
+          (click)="hideDone()"
+          class="hide-task-button"
+          [attr.aria-pressed]="hide_done"
+        >
+          {{ hide_done ? "Show All" : "Hide Done" }}
+          <mat-icon>{{
+            !hide_done ? "visibility_off" : "visibility"
+          }}</mat-icon>
+        </button>
       </div>
+    </div>
+    <div *ngIf="isLoading" class="loading-spinner">
+      <mat-spinner></mat-spinner>
+    </div>
+    <table
+      *ngIf="!isLoading"
+      mat-table
+      [dataSource]="dataSource"
+      matSort
+      (matSortChange)="sortData($event)"
+      multiTemplateDataRows
+    >
+      <!-- Id Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>Id</th>
+        <td mat-cell *matCellDef="let task">{{ task.id }}</td>
+      </ng-container>
+
+      <!-- Desc Column -->
+      <ng-container matColumnDef="todo">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>To Do</th>
+        <td mat-cell *matCellDef="let task">{{ task.description }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="done">
+        <th mat-header-cell *matHeaderCellDef>isDone</th>
+        <td mat-cell *matCellDef="let task">{{ task.done }}</td>
+      </ng-container>
+      <ng-container matColumnDef="date">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          class="mat-header-right"
+        >
+          Last Modified
+        </th>
+        <td mat-cell *matCellDef="let task">{{ task.modifiedDate }}</td>
+      </ng-container>
+      <ng-container matColumnDef="modify">
+        <th mat-header-cell *matHeaderCellDef class="mat-header-right">
+          Edit / Delete
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <button
+            type="button"
+            mat-icon-button
+            matSuffix
+            (click)="$event.stopPropagation(); openEditTaskDialog(row)"
+            [attr.aria-label]="'Edit Task'"
+          >
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button
+            type="button"
+            mat-icon-button
+            matSuffix
+            (click)="$event.stopPropagation(); clickDeleteTask(row)"
+            [attr.aria-label]="'Delete Task'"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr
+        mat-row
+        (click)="toggleDone(row)"
+        [class.task-is-done]="doneTasks.has(row)"
+        *matRowDef="let row; columns: displayedColumns"
+      ></tr>
+    </table>
+    <mat-paginator
+      [pageSizeOptions]="[15, 30, 50]"
+      showFirstLastButtons
+    ></mat-paginator>
+  </div>
 </div>
-  
