--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -150,3 +150,21 @@ footer > a {
 .mat-dialog-actions > button {
   margin-left: auto;
 }
+
+h1.info-title {
+  font-weight: bold;
+}
+
+.table-search-full-width > .mat-form-field-wrapper {
+  padding-bottom: 0;
+}
+
+.repo-url {
+  font-size: 1.5em;
+  color: white;
+}
+
+.legal-mit {
+  font-size: 10px;
+  line-height: 1;
+}
